src/test/ui/rfc-2008-non-exhaustive/structs-2.stderr
error: struct `structs::TupleStruct` is private
  --> $DIR/structs-2.rs:7:23
   |
LL |     let ts_explicit = structs::TupleStruct(640, 480);
   |                       ^^^^^^^^^^^^^^^^^^^^ private

error: aborting due to previous error

